--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,10 +7,10 @@ exclude: "^\
   "
 repos:
   - repo: https://github.com/pre-commit/mirrors-clang-format
-    rev: 'v13.0.0'
+    rev: "v18.1.0"
     hooks:
-    - id: clang-format
-    
+      - id: clang-format
+
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.6.0
     hooks:
@@ -30,3 +30,23 @@ repos:
     hooks:
       - id: prettier
         files: \.(js|ts|jsx|tsx|css|less|html|json|markdown|md|yaml|yml)$
+
+  # - repo: local
+  #   hooks:
+  #     # keep this before clang-tidy, it generates compile_commands.json for it.
+  #     # requires the 'compiledb' tool, 'pip install compiledb'
+  #     - id: compiledb
+  #       name: compiledb
+  #       entry: compiledb
+  #       language: system
+  #       args: [--overwrite, make, -n, -B]
+  #       always_run: true
+  #       require_serial: true
+  #       pass_filenames: false
+
+  # - repo: https://github.com/pocc/pre-commit-hooks
+  #   rev: v1.3.5
+  #   hooks:
+  #     - id: clang-tidy
+  #       args: [-checks=clang-diagnostic-return-type]
+  #       files: src/.*\.cpp
