--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,11 @@
 
 # But not .cpp
 !*.cpp
+!*.h
+!*.hpp
 # Or directories
 !*/
 !.gitignore
 !README.md
 !.pre-commit-config.yaml
+!format_all_cpp_files.sh
