--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,10 +7,10 @@ exclude: "^\
   "
 repos:
   - repo: https://github.com/pre-commit/mirrors-clang-format
-    rev: 'v13.0.0'
+    rev: "v18.1.0"
     hooks:
-    - id: clang-format
-    
+      - id: clang-format
+
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.6.0
     hooks:
@@ -19,7 +19,6 @@ repos:
       - id: check-merge-conflict # checks for files that contain merge conflict strings.
       - id: check-yaml # checks yaml files for parseable syntax.
       - id: detect-private-key # detects the presence of private keys.
-      - id: end-of-file-fixer # ensures that a file is either empty, or ends with one newline.
       - id: fix-byte-order-marker # removes utf-8 byte order marker.
       - id: mixed-line-ending # replaces or checks mixed line ending.
       - id: requirements-txt-fixer # sorts entries in requirements.txt.
@@ -30,3 +29,44 @@ repos:
     hooks:
       - id: prettier
         files: \.(js|ts|jsx|tsx|css|less|html|json|markdown|md|yaml|yml)$
+
+  - repo: https://github.com/codespell-project/codespell
+    rev: v2.2.4
+    hooks:
+      - id: codespell
+
+  # - repo: local
+  #   hooks:
+  #     - id: run-unit-tests
+  #       name: Run unit tests
+  #       entry: npm run test
+  #       language: system
+  #       stages: [commit]
+
+  # - repo: https://github.com/Takishima/cmake-pre-commit-hooks
+  #   rev: v1.9.6
+  #   hooks:
+  #     - id: clang-format
+  #     - id: clang-tidy
+  #       args: [--checks=readability-magic-numbers,--warnings-as-errors=*]
+  #     - id: cppcheck
+  #     - id: include-what-you-use
+  # - repo: local
+  #   hooks:
+  #     # keep this before clang-tidy, it generates compile_commands.json for it.
+  #     # requires the 'compiledb' tool, 'pip install compiledb'
+  #     - id: compiledb
+  #       name: compiledb
+  #       entry: compiledb
+  #       language: system
+  #       args: [--overwrite, make, -n, -B]
+  #       always_run: true
+  #       require_serial: true
+  #       pass_filenames: false
+
+  # - repo: https://github.com/pocc/pre-commit-hooks
+  #   rev: v1.3.5
+  #   hooks:
+  #     - id: clang-tidy
+  #       args: [-checks=clang-diagnostic-return-type]
+  #       files: src/.*\.cpp
